Fix : java21 문법 제거
Change-Id: I0bfca51288824204aace907645bf8bd628dca3d4